<resources>
    <string name="app_name">pokemonNormal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="p">Pokemon</string>
    <string name="i">Items</string>
    <string name="l">Location</string>
    <string name="sprite">sprite</string>
    <string name="pokemonName">name</string>
    <string name="pokemonId">id</string>
    <string name="title_activity_pokemon_details">pokemonDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pokemonHeight">Height :</string>
    <string name="pokemonWeight">Weight :</string>
    <string name="pokemonAbilities">Abilities :</string>
    <string name="pokemonTypes">Types :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemonRegions">Regions</string>
    <string name="types">Types</string>
    <string name="click_for_more_details">Click for more Details</string>
    <string name="hello">Hello,</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="loading_screen">loading screen</string>
    <string name="close">Close</string>
    <string name="favourites">Favourites</string>
    <string name="favourite">favourite</string>
    <string name="add_to_favourites">Add to favourites</string>
</resources>
